# secret-scanner-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/sample_project/: .env.example  config.py
src/secret_scanner/: __init__.py  cli.py  reporting.py  rules.py  scanner.py
tests/: test_cli.py  test_reporting.py  test_scanner.py
