[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "secret-scanner-cli"
version = "0.1.0"
description = "A dependency-free CLI for scanning source files for accidental secrets."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Saina Kakkar" }]
dependencies = []

[project.scripts]
secret-scanner = "secret_scanner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

